--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to MeTenk - Focus & Productivity</title>
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="icon" type="image/png" href="./favicon.png">
   <style>
     * {
       margin: 0;
