--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 - Privacy Policy</title>
+    <title>Privacy Policy</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -91,83 +91,83 @@
 </head>
 <body>
     <div class="container">
-        <h1>隐私政策 Privacy Policy</h1>
+        <h1>Privacy Policy</h1>
         
 
 
-        <h2>1. 概述</h2>
-        <p>我们非常重视您的隐私权。本隐私政策详细说明了我们的浏览器扩展程序如何收集、使用、存储和保护您的个人信息。使用我们的产品即表示您同意本隐私政策的条款。</p>
+        <h2>1. Overview</h2>
+        <p>We take your privacy very seriously. This privacy policy details how our browser extension collects, uses, stores, and protects your personal information. By using our product, you agree to the terms of this privacy policy.</p>
 
 
 
-        <h2>2. 权限使用说明</h2>
-        <p>我们的扩展程序需要以下权限来提供完整的功能体验：</p>
+        <h2>2. Permission Usage</h2>
+        <p>Our extension requires the following permissions to provide a complete functional experience:</p>
 
         <div class="permission-item">
-            <h3>Storage 权限</h3>
-            <p>用于保存用户自定义番茄时间、任务清单和插件设置，以便下次使用。</p>
+            <h3>Storage Permission</h3>
+            <p>Used to save user-customized pomodoro times, task lists, and extension settings for future use.</p>
         </div>
 
         <div class="permission-item">
-            <h3>Notifications 权限</h3>
-            <p>用于显示任务和番茄钟提醒通知。</p>
+            <h3>Notifications Permission</h3>
+            <p>Used to display task and pomodoro timer reminder notifications.</p>
         </div>
 
         <div class="permission-item">
-            <h3>Offscreen 权限</h3>
-            <p>用于在插件未打开时继续运行番茄钟、倒计时和任务提醒功能。</p>
+            <h3>Offscreen Permission</h3>
+            <p>Used to continue running pomodoro timer, countdown, and task reminder functions when the extension is not open.</p>
         </div>
 
         <div class="permission-item">
-            <h3>SidePanel 权限</h3>
-            <p>用于在浏览器侧边栏显示任务清单和番茄钟，以便用户随时查看和管理任务。</p>
+            <h3>SidePanel Permission</h3>
+            <p>Used to display task lists and pomodoro timer in the browser sidebar, allowing users to view and manage tasks at any time.</p>
         </div>
 
         <div class="permission-item">
-            <h3>Alarms 权限</h3>
-            <p>用于自定义番茄时钟提醒功能。</p>
+            <h3>Alarms Permission</h3>
+            <p>Used for custom pomodoro timer reminder functionality.</p>
         </div>
 
         <div class="permission-item">
-            <h3>ActiveTab 权限</h3>
-            <p>用于标记上次window位置和大小，方便下次同位置同大小。</p>
+            <h3>ActiveTab Permission</h3>
+            <p>Used to remember the last window position and size for convenient restoration to the same position and size next time.</p>
         </div>
 
-        <h2>3. 数据保护承诺</h2>
-        <p>我们承诺以下数据保护措施：</p>
+        <h2>3. Data Protection Commitments</h2>
+        <p>We commit to the following data protection measures:</p>
         
         <ul>
-            <li><strong>不会出于已获批准的用途之外的用途向第三方出售或传输用户数据</strong></li>
-            <li><strong>不会为实现与我们的产品的单一用途无关的目的而使用或转移用户数据</strong></li>
-            <li><strong>不会为确定信用度或实现放款而使用或转移用户数据</strong></li>
+            <li><strong>We will not sell or transfer user data to third parties for purposes other than approved uses</strong></li>
+            <li><strong>We will not use or transfer user data for purposes unrelated to the single purpose of our product</strong></li>
+            <li><strong>We will not use or transfer user data for determining creditworthiness or lending purposes</strong></li>
         </ul>
 
 
 
-        <h2>4. 数据存储和安全</h2>
-        <p>我们采用行业标准的安全措施来保护您的数据：</p>
+        <h2>4. Data Storage and Security</h2>
+        <p>We employ industry-standard security measures to protect your data:</p>
         <ul>
-            <li>所有数据均在本地存储，不会上传到外部服务器</li>
-            <li>使用加密技术保护敏感信息</li>
-            <li>定期更新安全协议和防护措施</li>
-            <li>严格限制数据访问权限</li>
+            <li>All data is stored locally and will not be uploaded to external servers</li>
+            <li>Encryption technology is used to protect sensitive information</li>
+            <li>Regular updates to security protocols and protective measures</li>
+            <li>Strict limitation of data access permissions</li>
         </ul>
 
 
 
-        <h2>5. 政策更新</h2>
-        <p>我们可能会不时更新本隐私政策。重大变更将通过扩展程序内通知或其他适当方式告知用户。继续使用我们的服务即表示您接受更新后的政策。</p>
+        <h2>5. Policy Updates</h2>
+        <p>We may update this privacy policy from time to time. Significant changes will be communicated to users through in-extension notifications or other appropriate means. Continued use of our service indicates your acceptance of the updated policy.</p>
 
         <div>
-            <h2>6. 联系我们</h2>
-            <p>如果您对本隐私政策有任何疑问或建议，请通过以下方式联系我们：</p>
+            <h2>6. Contact Us</h2>
+            <p>If you have any questions or suggestions about this privacy policy, please contact us through the following method:</p>
             <ul>
-                <li>邮箱：colintenk@gmail.com</li>
+                <li>Email: colintenk@gmail.com</li>
             </ul>
         </div>
 
         <div class="last-updated">
-            最后更新时间：2025年12月17日
+            Last updated: December 17, 2025
         </div>
     </div>
 </body>
