--- a/index.html
+++ b/index.html
@@ -1324,10 +1324,7 @@
       <div class="footer-content">
         <div class="footer-brand">Metenk</div>
         <div class="footer-links">
-          <a href="#" class="footer-link" id="footerSettingsLink">Settings</a>
-          <a href="#" class="footer-link" id="footerHistoryLink">History</a>
-          <a href="#" class="footer-link" id="footerSupportLink">Support</a>
-          <a href="#" class="footer-link" id="footerRateLink">Rate Us</a>
+          <a href="about.html" class="footer-link" id="footerAboutLink">About</a>
         </div>
         <div class="footer-copyright">
           © 2025 Metenk. Crafted with focus and dedication.
