change  把index.html的Download for chrome这2个按钮的文案改成Install MeTenk

--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@
       <div class="hero-cta">
         <a href="https://chromewebstore.google.com/detail/baefifnjmlmfcdkmbkdbjiijlpggkoic?utm_source=item-share-cb" target="_blank" id="heroStartBtn" class="btn btn-primary">
           <img src="resource/chromeicon.png" alt="Chrome Icon" style="width: 18px; height: 18px; margin-right: 10px;">
-          <span>Download for Chrome</span>
+          <span>Install MeTenk</span>
         </a>
       </div>
     </div>
@@ -1311,7 +1311,7 @@
       <div class="hero-cta fade-in">
         <a href="https://chromewebstore.google.com/detail/baefifnjmlmfcdkmbkdbjiijlpggkoic?utm_source=item-share-cb" target="_blank" id="ctaStartBtn" class="btn btn-primary">
           <img src="resource/chromeicon.png" alt="Chrome Icon" style="width: 16px; height: 16px; margin-right: 8px;">
-          <span>Download for Chrome</span>
+          <span>Install MeTenk</span>
         </a>
 
       </div>
