change todolist text

--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
                 <img src="resource/icon128.png" alt="MeTenk Logo">
             </div>
             <h1 class="title">About MeTenk</h1>
-            <p class="subtitle">Focus, Productivity, and Peace of Mind</p>
+            <p class="subtitle">Focus, Todo list, Timer, Productivity</p>
         </div>
 
         <div class="content">
