--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@ var _hmt = _hmt || [];
         <img src="resource/icon128.png" alt="MeTenk Logo">
       </div>
       <h1 class="hero-title">MeTenk</h1>
-      <p class="hero-subtitle">Focus, Productivity, and Peace of Mind</p>
+      <p class="hero-subtitle">Focus, Todo list, Timer, Productivity</p>
       <div class="hero-cta">
         <a href="https://chromewebstore.google.com/detail/baefifnjmlmfcdkmbkdbjiijlpggkoic?utm_source=item-share-cb" target="_blank" id="heroStartBtn" class="btn btn-primary">
           <img src="resource/chromeicon.png" alt="Chrome Icon" style="width: 18px; height: 18px; margin-right: 10px;">
