--- a/index.html
+++ b/index.html
@@ -1737,6 +1737,7 @@ var _hmt = _hmt || [];
         <div class="footer-links">
           <a href="https://metenk.com/privacy-policy.html" class="footer-link" target="_blank">Privacy Policy</a>
           <a href="about.html" class="footer-link" id="footerAboutLink">About</a>
+          <a href="sponsor.html" class="footer-link" id="footerCoffeeLink">Coffee</a>
         </div>
         <div class="footer-copyright">
           © 2025 Metenk. Crafted with focus and dedication.
