--- a/sponsor.html
+++ b/sponsor.html
@@ -382,7 +382,7 @@
         <div class="content">
             <div class="coffee-section">
                 <span class="coffee-icon">☕</span>
-                <h2 class="coffee-title">Buy us a coffee</h2>
+                <h2 class="coffee-title">Buy me a coffee</h2>
             </div>
 
             <div class="payment-methods">
