--- a/sponsor.html
+++ b/sponsor.html
@@ -36,7 +36,7 @@
             height: 80px;
             margin: 0 auto 20px;
             animation: float 3s ease-in-out infinite;
-            filter: drop-shadow(0 10px 30px rgba(67, 97, 238, 0.3));
+            filter: drop-shadow(0 10px 30px rgba(100, 100, 100, 0.3));
         }
 
         .logo img {
@@ -85,7 +85,7 @@
             left: 0;
             right: 0;
             height: 3px;
-            background: linear-gradient(90deg, rgba(67, 97, 238, 0.8), rgba(72, 149, 239, 0.8));
+            background: linear-gradient(90deg, rgba(100, 100, 100, 0.8), rgba(120, 120, 120, 0.8));
             border-radius: 24px 24px 0 0;
         }
 
@@ -175,8 +175,8 @@
         }
 
         .qr-image:hover {
-            border-color: rgba(67, 97, 238, 0.4);
-            background: rgba(67, 97, 238, 0.1);
+            border-color: rgba(120, 120, 120, 0.4);
+            background: rgba(120, 120, 120, 0.1);
             transform: scale(1.05);
         }
 
@@ -231,14 +231,14 @@
             display: inline-flex;
             align-items: center;
             gap: 10px;
-            background: linear-gradient(135deg, #4361ee 0%, #4895ef 100%);
+            background: linear-gradient(135deg, #666666 0%, #888888 100%);
             color: white;
             padding: 15px 30px;
             border-radius: 50px;
             text-decoration: none;
             font-weight: 600;
             transition: all 0.3s ease;
-            box-shadow: 0 10px 30px rgba(67, 97, 238, 0.3);
+            box-shadow: 0 10px 30px rgba(100, 100, 100, 0.3);
             border: none;
             cursor: pointer;
             font-size: 16px;
@@ -246,11 +246,11 @@
 
         .payment-btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 40px rgba(67, 97, 238, 0.5);
+            box-shadow: 0 15px 40px rgba(0, 102, 255, 0.5);
         }
 
         .payment-btn.stripe {
-            background: linear-gradient(135deg, #635bff 0%, #4f46e5 100%);
+            background: linear-gradient(135deg, #0066ff 0%, #0040ff 100%);
         }
 
         .payment-btn.crypto {
@@ -285,9 +285,9 @@
             text-align: center;
             margin-top: 30px;
             padding: 25px;
-            background: rgba(67, 97, 238, 0.1);
+            background: rgba(100, 100, 100, 0.1);
             border-radius: 16px;
-            border: 1px solid rgba(67, 97, 238, 0.2);
+            border: 1px solid rgba(100, 100, 100, 0.2);
         }
 
         .thank-you-text {
