--- a/clockmax.html
+++ b/clockmax.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Clock Max - Welcome</title>
-  <link rel="stylesheet" href="css/clockmax-wel.css">
+  <link rel="stylesheet" href="clockmax-wel.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -235,6 +235,6 @@
     </div>
   </div>
 
-  <script src="js/clockmax-wel.js"></script>
+  <script src="clockmax-wel.js"></script>
 </body>
 </html>
