--- a/clockmax.html
+++ b/clockmax.html
@@ -6,6 +6,7 @@
   <title>Clock Max - Welcome</title>
   <link rel="stylesheet" href="clockmax-wel.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png" href="./clockmax-icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
