--- a/clockmax.html
+++ b/clockmax.html
@@ -163,6 +163,60 @@
       </div>
     </div>
 
+    <div class="preview-section">
+      <div class="preview-container">
+        <div class="preview-header">
+          <h2 class="preview-title">Interface</h2>
+        </div>
+        <div class="preview-carousel">
+          <div class="carousel-frame">
+            <div class="carousel-header">
+              <div class="carousel-dots">
+                <span></span><span></span><span></span>
+              </div>
+              <span class="carousel-title">Clock Max</span>
+            </div>
+            <div class="carousel-content">
+              <div class="carousel-slider">
+                <div class="carousel-slide active">
+                  <img src="./resource/preview-one.png" alt="Clock Max Preview 1" loading="lazy">
+                </div>
+                <div class="carousel-slide">
+                  <img src="./resource/preview-two.png" alt="Clock Max Preview 2" loading="lazy">
+                </div>
+                <div class="carousel-slide">
+                  <img src="./resource/preview-three.png" alt="Clock Max Preview 3" loading="lazy">
+                </div>
+                <div class="carousel-slide">
+                  <img src="./resource/preview-four.png" alt="Clock Max Preview 4" loading="lazy">
+                </div>
+                <div class="carousel-slide">
+                  <img src="./resource/preview-five.png" alt="Clock Max Preview 5" loading="lazy">
+                </div>
+              </div>
+              <button class="carousel-nav carousel-prev" aria-label="Previous slide">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M15 18l-6-6 6-6"/>
+                </svg>
+              </button>
+              <button class="carousel-nav carousel-next" aria-label="Next slide">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 18l6-6-6-6"/>
+                </svg>
+              </button>
+            </div>
+            <div class="carousel-indicators">
+              <button class="indicator active" data-slide="0" aria-label="Go to slide 1"></button>
+              <button class="indicator" data-slide="1" aria-label="Go to slide 2"></button>
+              <button class="indicator" data-slide="2" aria-label="Go to slide 3"></button>
+              <button class="indicator" data-slide="3" aria-label="Go to slide 4"></button>
+              <button class="indicator" data-slide="4" aria-label="Go to slide 5"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="features-section">
       <div class="features-header">
         <h2 class="features-title">Everything You Need</h2>
@@ -232,6 +286,8 @@
         <span class="footer-brand">Clock Max</span>
         <span class="footer-divider">|</span>
         <span class="footer-copy">Made with by MeTenk</span>
+        <span class="footer-divider">|</span>
+        <a href="./clock-privacy-policy.html" class="footer-link">Privacy Policy</a>
       </div>
     </div>
   </div>
