--- a/index.html
+++ b/index.html
@@ -1826,6 +1826,7 @@ var _hmt = _hmt || [];
           </div>
         </div>
         <div class="footer-links">
+          <a href="clockmax.html" class="footer-link">Clock Max</a>
           <a href="https://metenk.com/privacy-policy.html" class="footer-link" target="_blank">Privacy Policy</a>
           <a href="about.html" class="footer-link" id="footerAboutLink">About</a>
           <a href="sponsor.html" class="footer-link" id="footerCoffeeLink">Coffee</a>
