--- a/index.html
+++ b/index.html
@@ -604,15 +604,43 @@ var _hmt = _hmt || [];
       position: relative;
     }
 
+    .logo-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
     .logo {
       width: 120px;
       height: 120px;
-      margin: 0 auto 30px;
       animation: float 3s ease-in-out infinite;
       filter: drop-shadow(0 10px 30px rgba(67, 97, 238, 0.3));
     }
-    
+
     .logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+    .clockmax-icon {
+      width: 80px;
+      height: 80px;
+      filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
+      transition: transform 0.3s ease, filter 0.3s ease;
+      cursor: pointer;
+      animation: rollIn 1.5s ease-out forwards, animalBounce 2s ease-in-out infinite 1.5s;
+      margin-left: 50px;
+    }
+
+    .clockmax-icon:hover {
+      transform: scale(1.1);
+      filter: drop-shadow(0 12px 30px rgba(67, 97, 238, 0.5));
+    }
+
+    .clockmax-icon img {
       width: 100%;
       height: 100%;
       object-fit: contain;
@@ -621,6 +649,53 @@ var _hmt = _hmt || [];
     @keyframes float {
       0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-20px); }
+    }
+
+    @keyframes rollIn {
+      0% {
+        transform: translateX(200px) rotate(720deg) scale(0.5);
+        opacity: 0;
+      }
+      60% {
+        transform: translateX(-20px) rotate(-20deg) scale(1.1);
+        opacity: 1;
+      }
+      80% {
+        transform: translateX(10px) rotate(10deg) scale(0.95);
+      }
+      100% {
+        transform: translateX(0) rotate(0deg) scale(1);
+      }
+    }
+
+    @keyframes animalBounce {
+      0%, 100% {
+        transform: translateY(0) rotate(0deg) scale(1);
+      }
+      10% {
+        transform: translateY(-20px) rotate(-15deg) scale(1.05, 0.95);
+      }
+      20% {
+        transform: translateY(0) rotate(0deg) scale(0.95, 1.05);
+      }
+      30% {
+        transform: translateY(-15px) rotate(10deg) scale(1.02, 0.98);
+      }
+      40% {
+        transform: translateY(0) rotate(0deg) scale(1);
+      }
+      50% {
+        transform: translateY(-8px) rotate(-5deg) scale(1.01, 0.99);
+      }
+      60% {
+        transform: translateY(0) rotate(0deg) scale(1);
+      }
+      70% {
+        transform: translateY(-4px) rotate(3deg) scale(1.005, 0.995);
+      }
+      80% {
+        transform: translateY(0) rotate(0deg) scale(1);
+      }
     }
 
     .hero-title {
@@ -1529,8 +1604,19 @@ var _hmt = _hmt || [];
         font-size: 18px;
       }
 
+      .logo-container {
+        gap: 0;
+      }
+
       .logo {
-        font-size: 80px;
+        width: 90px;
+        height: 90px;
+      }
+
+      .clockmax-icon {
+        width: 60px;
+        height: 60px;
+        margin-left: 30px;
       }
 
       .section-title {
@@ -1711,8 +1797,13 @@ var _hmt = _hmt || [];
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <div class="logo">
-        <img src="resource/icon128.png" alt="MeTenk Logo">
+      <div class="logo-container">
+        <div class="logo">
+          <img src="resource/icon128.png" alt="MeTenk Logo">
+        </div>
+        <a href="clockmax.html" class="clockmax-icon" title="Clock Max">
+          <img src="resource/clockmax-icon.png" alt="Clock Max">
+        </a>
       </div>
       <h1 class="hero-title">MeTenk</h1>
       <p class="hero-subtitle">Focus, Todo list, Timer, Productivity</p>
