--- a/index.html
+++ b/index.html
@@ -631,8 +631,8 @@ var _hmt = _hmt || [];
       filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
       transition: transform 0.3s ease, filter 0.3s ease;
       cursor: pointer;
-      animation: rollIn 1.5s ease-out forwards, animalBounce 2s ease-in-out infinite 1.5s;
-      margin-left: 50px;
+      animation: animalWalk 6s ease-in-out forwards, animalIdle 2.5s ease-in-out infinite 6s;
+       margin-left: 100px;
     }
 
     .clockmax-icon:hover {
@@ -651,49 +651,66 @@ var _hmt = _hmt || [];
       50% { transform: translateY(-20px); }
     }
 
-    @keyframes rollIn {
+    @keyframes animalWalk {
       0% {
-        transform: translateX(200px) rotate(720deg) scale(0.5);
+        transform: translateX(100vw) rotate(0deg);
         opacity: 0;
       }
-      60% {
-        transform: translateX(-20px) rotate(-20deg) scale(1.1);
+      5% {
         opacity: 1;
       }
+      10% {
+        transform: translateX(85vw) rotate(-25deg) translateY(-8px);
+      }
+      20% {
+        transform: translateX(70vw) rotate(20deg) translateY(0);
+      }
+      30% {
+        transform: translateX(55vw) rotate(-30deg) translateY(-12px);
+      }
+      40% {
+        transform: translateX(40vw) rotate(25deg) translateY(0);
+      }
+      50% {
+        transform: translateX(28vw) rotate(-20deg) translateY(-10px);
+      }
+      60% {
+        transform: translateX(18vw) rotate(30deg) translateY(0);
+      }
+      70% {
+        transform: translateX(10vw) rotate(-25deg) translateY(-6px);
+      }
       80% {
-        transform: translateX(10px) rotate(10deg) scale(0.95);
+        transform: translateX(5vw) rotate(15deg) translateY(0);
+      }
+      90% {
+        transform: translateX(2vw) rotate(-10deg) translateY(-3px);
       }
       100% {
-        transform: translateX(0) rotate(0deg) scale(1);
+        transform: translateX(0) rotate(0deg) translateY(0);
       }
     }
 
-    @keyframes animalBounce {
+    @keyframes animalIdle {
       0%, 100% {
         transform: translateY(0) rotate(0deg) scale(1);
       }
-      10% {
-        transform: translateY(-20px) rotate(-15deg) scale(1.05, 0.95);
-      }
-      20% {
-        transform: translateY(0) rotate(0deg) scale(0.95, 1.05);
+      15% {
+        transform: translateY(-12px) rotate(-12deg) scale(1.03, 0.97);
       }
       30% {
-        transform: translateY(-15px) rotate(10deg) scale(1.02, 0.98);
+        transform: translateY(0) rotate(0deg) scale(0.97, 1.03);
       }
-      40% {
-        transform: translateY(0) rotate(0deg) scale(1);
-      }
-      50% {
-        transform: translateY(-8px) rotate(-5deg) scale(1.01, 0.99);
+      45% {
+        transform: translateY(-8px) rotate(8deg) scale(1.02, 0.98);
       }
       60% {
         transform: translateY(0) rotate(0deg) scale(1);
       }
-      70% {
-        transform: translateY(-4px) rotate(3deg) scale(1.005, 0.995);
+      75% {
+        transform: translateY(-5px) rotate(-5deg) scale(1.01, 0.99);
       }
-      80% {
+      90% {
         transform: translateY(0) rotate(0deg) scale(1);
       }
     }
@@ -1616,7 +1633,7 @@ var _hmt = _hmt || [];
       .clockmax-icon {
         width: 60px;
         height: 60px;
-        margin-left: 30px;
+        margin-left: 50px;
       }
 
       .section-title {
