--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@ var _hmt = _hmt || [];
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;
       margin-bottom: 30px;
+      position: relative;
     }
 
     .logo {
@@ -632,7 +632,10 @@ var _hmt = _hmt || [];
       transition: transform 0.3s ease, filter 0.3s ease;
       cursor: pointer;
       animation: animalWalk 6s ease-in-out forwards, animalIdle 2.5s ease-in-out infinite 6s;
-       margin-left: 100px;
+      position: absolute;
+      left: calc(50% + 60px + 100px);
+      top: 50%;
+      transform: translateY(-50%);
     }
 
     .clockmax-icon:hover {
@@ -1633,7 +1636,7 @@ var _hmt = _hmt || [];
       .clockmax-icon {
         width: 60px;
         height: 60px;
-        margin-left: 50px;
+        left: calc(50% + 45px + 50px);
       }
 
       .section-title {
