--- a/index.html
+++ b/index.html
@@ -633,9 +633,8 @@ var _hmt = _hmt || [];
       cursor: pointer;
       animation: animalWalk 6s ease-in-out forwards, animalIdle 2.5s ease-in-out infinite 6s;
       position: absolute;
-      left: calc(50% + 60px + 100px);
-      top: 50%;
-      transform: translateY(-50%);
+      left: calc(50% + 60px + 130px);
+      bottom: 0;
     }
 
     .clockmax-icon:hover {
@@ -1636,7 +1635,7 @@ var _hmt = _hmt || [];
       .clockmax-icon {
         width: 60px;
         height: 60px;
-        left: calc(50% + 45px + 50px);
+        left: calc(50% + 45px + 80px);
       }
 
       .section-title {
