--- a/index.html
+++ b/index.html
@@ -625,19 +625,28 @@ var _hmt = _hmt || [];
       object-fit: contain;
     }
 
+    .clockmax-wrapper {
+      position: absolute;
+      left: calc(50% + 60px + 200px);
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
     .clockmax-icon {
       width: 80px;
       height: 80px;
       filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
       transition: transform 0.3s ease, filter 0.3s ease;
-      cursor: pointer;
       animation: animalWalk 6s ease-in-out forwards, animalIdle 2.5s ease-in-out infinite 6s;
-      position: absolute;
-      left: calc(50% + 60px + 130px);
-      bottom: 0;
+      transform-style: preserve-3d;
+      perspective: 1000px;
     }
 
-    .clockmax-icon:hover {
+    .clockmax-wrapper:hover .clockmax-icon {
       transform: scale(1.1);
       filter: drop-shadow(0 12px 30px rgba(67, 97, 238, 0.5));
     }
@@ -648,6 +657,34 @@ var _hmt = _hmt || [];
       object-fit: contain;
     }
 
+    .clockmax-label {
+      margin-top: 12px;
+      font-size: 14px;
+      font-weight: 600;
+      color: rgba(255, 255, 255, 0.9);
+      text-shadow: 0 2px 10px rgba(67, 97, 238, 0.5);
+      opacity: 0;
+      transform: translateY(-10px);
+      animation: labelFadeIn 0.8s ease-out forwards 6s;
+      white-space: nowrap;
+      letter-spacing: 1px;
+      background: linear-gradient(135deg, #ffffff 0%, #a8b2d1 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    @keyframes labelFadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     @keyframes float {
       0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-20px); }
@@ -655,65 +692,107 @@ var _hmt = _hmt || [];
 
     @keyframes animalWalk {
       0% {
-        transform: translateX(100vw) rotate(0deg);
+        transform: translateX(100vw) rotateY(-30deg) rotateZ(0deg) scale(0.8, 0.8);
         opacity: 0;
+        filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.5));
       }
       5% {
         opacity: 1;
       }
-      10% {
-        transform: translateX(85vw) rotate(-25deg) translateY(-8px);
+      8% {
+        transform: translateX(88vw) rotateY(20deg) rotateZ(-35deg) rotateX(15deg) scale(0.85, 1.15) skewX(-10deg);
+        filter: drop-shadow(15px 25px 25px rgba(0, 0, 0, 0.4));
       }
-      20% {
-        transform: translateX(70vw) rotate(20deg) translateY(0);
+      16% {
+        transform: translateX(76vw) rotateY(-25deg) rotateZ(30deg) rotateX(-10deg) scale(1.1, 0.9) skewX(8deg);
+        filter: drop-shadow(10px 20px 20px rgba(0, 0, 0, 0.35));
       }
-      30% {
-        transform: translateX(55vw) rotate(-30deg) translateY(-12px);
+      24% {
+        transform: translateX(64vw) rotateY(15deg) rotateZ(-40deg) rotateX(20deg) scale(0.9, 1.1) skewX(-12deg);
+        filter: drop-shadow(12px 22px 22px rgba(0, 0, 0, 0.38));
+      }
+      32% {
+        transform: translateX(52vw) rotateY(-20deg) rotateZ(35deg) rotateX(-15deg) scale(1.05, 0.95) skewX(10deg);
+        filter: drop-shadow(8px 18px 18px rgba(0, 0, 0, 0.3));
       }
       40% {
-        transform: translateX(40vw) rotate(25deg) translateY(0);
+        transform: translateX(40vw) rotateY(25deg) rotateZ(-45deg) rotateX(25deg) scale(0.88, 1.12) skewX(-8deg);
+        filter: drop-shadow(10px 20px 20px rgba(0, 0, 0, 0.35));
       }
-      50% {
-        transform: translateX(28vw) rotate(-20deg) translateY(-10px);
+      48% {
+        transform: translateX(30vw) rotateY(-15deg) rotateZ(38deg) rotateX(-12deg) scale(1.08, 0.92) skewX(12deg);
+        filter: drop-shadow(6px 16px 16px rgba(0, 0, 0, 0.28));
       }
-      60% {
-        transform: translateX(18vw) rotate(30deg) translateY(0);
+      56% {
+        transform: translateX(22vw) rotateY(20deg) rotateZ(-42deg) rotateX(18deg) scale(0.92, 1.08) skewX(-10deg);
+        filter: drop-shadow(8px 18px 18px rgba(0, 0, 0, 0.32));
       }
-      70% {
-        transform: translateX(10vw) rotate(-25deg) translateY(-6px);
+      64% {
+        transform: translateX(15vw) rotateY(-10deg) rotateZ(32deg) rotateX(-8deg) scale(1.03, 0.97) skewX(6deg);
+        filter: drop-shadow(5px 14px 14px rgba(0, 0, 0, 0.25));
+      }
+      72% {
+        transform: translateX(10vw) rotateY(15deg) rotateZ(-28deg) rotateX(12deg) scale(0.95, 1.05) skewX(-8deg);
+        filter: drop-shadow(6px 15px 15px rgba(0, 0, 0, 0.28));
       }
       80% {
-        transform: translateX(5vw) rotate(15deg) translateY(0);
+        transform: translateX(6vw) rotateY(-8deg) rotateZ(18deg) rotateX(-5deg) scale(1.02, 0.98) skewX(4deg);
+        filter: drop-shadow(4px 12px 12px rgba(0, 0, 0, 0.22));
       }
-      90% {
-        transform: translateX(2vw) rotate(-10deg) translateY(-3px);
+      88% {
+        transform: translateX(2vw) rotateY(5deg) rotateZ(-10deg) rotateX(8deg) scale(0.98, 1.02) skewX(-3deg);
+        filter: drop-shadow(3px 10px 10px rgba(0, 0, 0, 0.2));
+      }
+      95% {
+        transform: translateX(0.5vw) rotateY(-3deg) rotateZ(5deg) rotateX(-3deg) scale(1.01, 0.99);
+        filter: drop-shadow(2px 8px 8px rgba(0, 0, 0, 0.18));
       }
       100% {
-        transform: translateX(0) rotate(0deg) translateY(0);
+        transform: translateX(0) rotateY(0deg) rotateZ(0deg) rotateX(0deg) scale(1, 1);
+        filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
       }
     }
 
     @keyframes animalIdle {
       0%, 100% {
-        transform: translateY(0) rotate(0deg) scale(1);
+        transform: translateY(0) rotateY(0deg) rotateZ(0deg) rotateX(0deg) scale(1, 1);
+        filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
       }
-      15% {
-        transform: translateY(-12px) rotate(-12deg) scale(1.03, 0.97);
+      10% {
+        transform: translateY(-15px) rotateY(15deg) rotateZ(-20deg) rotateX(20deg) scale(1.1, 0.9) skewX(-8deg);
+        filter: drop-shadow(5px 20px 25px rgba(67, 97, 238, 0.4));
+      }
+      20% {
+        transform: translateY(0) rotateY(-10deg) rotateZ(0deg) rotateX(-10deg) scale(0.9, 1.1) skewX(5deg);
+        filter: drop-shadow(-3px 15px 20px rgba(67, 97, 238, 0.35));
       }
       30% {
-        transform: translateY(0) rotate(0deg) scale(0.97, 1.03);
+        transform: translateY(-12px) rotateY(20deg) rotateZ(15deg) rotateX(15deg) scale(1.05, 0.95) skewX(10deg);
+        filter: drop-shadow(8px 18px 22px rgba(67, 97, 238, 0.38));
       }
-      45% {
-        transform: translateY(-8px) rotate(8deg) scale(1.02, 0.98);
+      40% {
+        transform: translateY(0) rotateY(-15deg) rotateZ(0deg) rotateX(-8deg) scale(0.95, 1.05) skewX(-5deg);
+        filter: drop-shadow(-5px 12px 18px rgba(67, 97, 238, 0.32));
+      }
+      50% {
+        transform: translateY(-8px) rotateY(10deg) rotateZ(-10deg) rotateX(12deg) scale(1.03, 0.97) skewX(6deg);
+        filter: drop-shadow(4px 15px 20px rgba(67, 97, 238, 0.35));
       }
       60% {
-        transform: translateY(0) rotate(0deg) scale(1);
+        transform: translateY(0) rotateY(0deg) rotateZ(0deg) rotateX(0deg) scale(1, 1);
+        filter: drop-shadow(0 8px 20px rgba(67, 97, 238, 0.3));
       }
-      75% {
-        transform: translateY(-5px) rotate(-5deg) scale(1.01, 0.99);
+      70% {
+        transform: translateY(-5px) rotateY(-8deg) rotateZ(8deg) rotateX(8deg) scale(1.02, 0.98) skewX(-4deg);
+        filter: drop-shadow(-3px 12px 16px rgba(67, 97, 238, 0.32));
+      }
+      80% {
+        transform: translateY(0) rotateY(5deg) rotateZ(0deg) rotateX(-5deg) scale(0.98, 1.02);
+        filter: drop-shadow(2px 10px 14px rgba(67, 97, 238, 0.28));
       }
       90% {
-        transform: translateY(0) rotate(0deg) scale(1);
+        transform: translateY(-3px) rotateY(-3deg) rotateZ(-5deg) rotateX(5deg) scale(1.01, 0.99);
+        filter: drop-shadow(-2px 8px 12px rgba(67, 97, 238, 0.25));
       }
     }
 
@@ -1632,10 +1711,18 @@ var _hmt = _hmt || [];
         height: 90px;
       }
 
+      .clockmax-wrapper {
+        left: calc(50% + 45px + 120px);
+      }
+
       .clockmax-icon {
         width: 60px;
         height: 60px;
-        left: calc(50% + 45px + 80px);
+      }
+
+      .clockmax-label {
+        font-size: 12px;
+        margin-top: 8px;
       }
 
       .section-title {
@@ -1820,8 +1907,11 @@ var _hmt = _hmt || [];
         <div class="logo">
           <img src="resource/icon128.png" alt="MeTenk Logo">
         </div>
-        <a href="clockmax.html" class="clockmax-icon" title="Clock Max">
-          <img src="resource/clockmax-icon.png" alt="Clock Max">
+        <a href="clockmax.html" class="clockmax-wrapper" title="Clock Max">
+          <div class="clockmax-icon">
+            <img src="resource/clockmax-icon.png" alt="Clock Max">
+          </div>
+          <span class="clockmax-label">Clock Max</span>
         </a>
       </div>
       <h1 class="hero-title">MeTenk</h1>
