--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@ var _hmt = _hmt || [];
         <div class="logo">
           <img src="resource/icon128.png" alt="MeTenk Logo">
         </div>
-        <a href="clockmax.html" class="clockmax-wrapper" title="Clock Max">
+        <a href="clockmax.html" class="clockmax-wrapper" title="Clock Max" target="_blank" rel="noopener noreferrer">
           <div class="clockmax-icon">
             <img src="resource/clockmax-icon.png" alt="Clock Max">
           </div>
@@ -2026,7 +2026,7 @@ var _hmt = _hmt || [];
           </div>
         </div>
         <div class="footer-links">
-          <a href="clockmax.html" class="footer-link">Clock Max</a>
+          <a href="clockmax.html" class="footer-link" target="_blank" rel="noopener noreferrer">Clock Max</a>
           <a href="https://metenk.com/privacy-policy.html" class="footer-link" target="_blank">Privacy Policy</a>
           <a href="about.html" class="footer-link" id="footerAboutLink">About</a>
           <a href="sponsor.html" class="footer-link" id="footerCoffeeLink">Coffee</a>
